Resolves: fdo#69271 i#123510 changed priority in style preparation

(cherry picked from commit 86459550d81c3eae067e89d9af1b6e872215a588)

(cherry picked from commit 8b2fb0e153fa846a171105b7801c398ffbe3d595)

Change-Id: Ia567666cd76dce646479003a830d969f4962da71
Signed-off-by: Michael Stahl <mstahl@redhat.com>